tests/misc/tatomic.nim
discard """
  file: "tatomic.nim"
  line: 7
  errormsg: "identifier expected, but found 'keyword atomic'"
"""
var
  atomic: int

echo atomic



